--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">News</a>
+                    <a href="./pages/news.html">News</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
