--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="animationBox">
+
+            </div>
+        </div>
     </main>
 </body>
 
